# pocketlm

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md
lessons/: _template.ipynb
lessons/u0-make-it-speak/: l0-1-generate-text.ipynb  l0-2-tokens.ipynb  l0-3-probabilities.ipynb  l0-4-temperature-and-decoding.ipynb  l0-5-break-generation.ipynb
lessons/u1-tensors-that-learn/: l1-1-tensors-and-shapes.ipynb  l1-2-matrix-multiplication.ipynb  l1-3-softmax.ipynb  l1-4-cross-entropy.ipynb  l1-5-gradients-and-autograd.ipynb  l1-6-optimization-loop.ipynb
lessons/u2-text-becomes-vectors/: l2-1-characters-as-tokens.ipynb  l2-2-bytes-and-byte-level-bpe.ipynb  l2-3-vocabulary-design.ipynb  l2-4-embeddings.ipynb  l2-5-positional-information.ipynb  l2-6-batching-and-padding.ipynb
lessons/u3-attention-from-scratch/: l3-1-queries-keys-and-values.ipynb  l3-2-scaled-dot-product.ipynb  l3-3-causal-masking.ipynb  l3-4-multi-head-attention.ipynb  l3-5-shape-tracing-and-tests.ipynb
lessons/u4-assemble-the-transformer/: l4-1-residual-stream.ipynb  l4-2-pre-normalization.ipynb  l4-3-mlp-feed-forward.ipynb  l4-4-transformer-block.ipynb  l4-5-output-head-and-weight-tying.ipynb
lessons/u5-train-and-debug-it/: l5-1-initialization.ipynb  l5-2-optimizers.ipynb  l5-3-learning-rate-schedules.ipynb  l5-4-dataset-splits.ipynb  l5-5-over-and-underfitting.ipynb  l5-6-perplexity-and-evaluation.ipynb  l5-7-checkpointing-and-resume.ipynb
lessons/u6-modernize-the-architecture/: l6-1-rope.ipynb  l6-2-rmsnorm.ipynb  l6-3-swiglu.ipynb  l6-4-gqa-mqa.ipynb  l6-5-flashattention.ipynb  l6-6-scaling-laws.ipynb  l6-7-moe-introduction.ipynb  (+1 more)
pocketlm/: __init__.py  attention.py  bigram.py  bpe.py  corpus.py  corpus.txt  data.py  generate.py  kvcache.py  lora.py  model.py  modern.py  posttrain.py  serve.py  tokenizer.py  train.py  trainer.py
scripts/: fetch_corpus.py
tests/: test_attention.py  test_bigram.py  test_bpe.py  test_corpus.py  test_data.py  test_generate.py  test_golden.py  test_inference.py  test_model.py  test_modern.py  test_paths.py  test_posttrain.py  test_tokenizer.py  test_train.py  test_trainer.py
(+14 files in other folders)
