[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketlm"
version = "0.1.0"
description = "Build a decoder-only language model from scratch — the PocketLM course artifact."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ni5h4nt" }]
# Runtime floor (loose) so Colab's preinstalled torch satisfies it without a downgrade.
dependencies = ["torch>=2.4", "numpy", "matplotlib"]

[project.optional-dependencies]
# dev tightens the floor to a determinism pin for CI; >=2.4 and ==2.4.* resolve to 2.4.*
dev = ["torch==2.4.*", "pytest", "nbmake", "ruff", "mypy", "nbqa"]

[tool.setuptools.packages.find]
include = ["pocketlm*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
