[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketlm"
version = "0.1.0"
description = "Build a decoder-only language model from scratch — the PocketLM course artifact."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ni5h4nt" }]
# Runtime floor (loose) so Colab's preinstalled torch satisfies it without a downgrade.
dependencies = ["torch>=2.4", "numpy", "matplotlib"]

[project.optional-dependencies]
# dev tightens the floor to a determinism pin for CI; >=2.4 and ==2.4.* resolve to 2.4.*
dev = ["torch==2.4.*", "pytest", "nbmake", "ruff", "mypy", "nbqa"]

[tool.setuptools.packages.find]
include = ["pocketlm*"]

[tool.ruff]
line-length = 100

# Lesson notebooks teach by importing per cell, so module-level imports follow
# explanatory code. Allow that (E402) in lessons only, not in the package.
[tool.ruff.lint.per-file-ignores]
"lessons/*" = ["E402"]

# Target 3.12 for the type checker: numpy 2.x ships PEP 695 `type` statements in
# its stubs (reached via torch's stubs) that mypy only parses under >=3.12. The
# package stays 3.10-runtime-safe via `from __future__ import annotations`.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
